updating java application code

--- a/opstest/src/main/resources/application.properties
+++ b/opstest/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.h2.console.enabled=true
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
 spring.session.timeout.seconds=900
+
+suchname=Lxk82690 in Dev ENV and Availability Zone
